feat(api): :sparkles: add API endpoints routes
Use Next.js routes to handle calls to GitHub API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "conventionalCommits.scopes": [
     "home",
-    "auth"
+    "auth",
+    "components",
+    "api"
   ]
 }
