--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "test:ci": "jest --ci",
     "prepare": "husky install"
   },
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@playwright/test": "^1.35.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -34,6 +37,7 @@
     "@types/testing-library__jest-dom": "^5.14.6",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "eslint-plugin-playwright": "^0.12.0",
     "eslint-plugin-testing-library": "^5.11.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
